# lenia

./: Cargo.toml
assets/shaders/: compute.wgsl  types.wgsl
src/: data.rs  main.rs
